// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`svg.ts Path commands parameter and getCommandString Normal 1`] = `
Array [
  Command {
    "type": "M",
    "value": Array [
      0,
      0,
    ],
  },
  Command {
    "type": "L",
    "value": Array [
      1,
      1,
    ],
  },
  Command {
    "type": "L",
    "value": Array [
      -1,
      -1,
    ],
  },
]
`;

exports[`svg.ts Path commands parameter and getCommandString Normal 2`] = `"M 0 0 L 1 1 L -1 -1"`;

exports[`svg.ts Path parseCommandString failed pattern 1`] = `
Array [
  Command {
    "type": "M",
    "value": Array [],
  },
]
`;

exports[`svg.ts Path parseCommandString failed pattern 2`] = `
Array [
  Command {
    "type": "M",
    "value": Array [
      0,
      0,
    ],
  },
]
`;

exports[`svg.ts Path toJson and toElement toElement 1`] = `
<path
  d="M 0 0 L 1 1 L 2 1 L 3 0"
  fill="none"
  stroke="#000"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="1"
/>
`;

exports[`svg.ts Path toJson and toElement toJson 1`] = `
Object {
  "attrs": Object {
    "strokeLinecap": "round",
    "strokeLinejoin": "round",
  },
  "d": "M 0 0 L 1 1 L 2 1 L 3 0",
}
`;

exports[`svg.ts Svg parseSVGElement 1`] = `
Svg {
  "_paths": Array [
    Path {
      "attrs": Object {
        "d": "M 1 1 L 2 2 C 3 3 5 3 7 3 Z",
        "strokeLinecap": "round",
        "strokeLinejoin": "round",
      },
      "commands": Array [
        Command {
          "type": "M",
          "value": Array [
            2,
            2,
          ],
        },
        Command {
          "type": "L",
          "value": Array [
            4,
            4,
          ],
        },
        Command {
          "type": "C",
          "value": Array [
            6,
            6,
            10,
            6,
            14,
            6,
          ],
        },
        Command {
          "type": "Z",
          "value": Array [],
        },
      ],
      "fill": "#f00",
      "stroke": "#00f",
      "strokeWidth": 8,
    },
  ],
  "height": 400,
  "width": 400,
}
`;

exports[`svg.ts Svg parseSVGString 1`] = `
Svg {
  "_paths": Array [
    Path {
      "attrs": Object {
        "d": "M 1 1 L 2 2 C 3 3 5 3 7 3 Z",
        "strokeLinecap": "round",
        "strokeLinejoin": "round",
      },
      "commands": Array [
        Command {
          "type": "M",
          "value": Array [
            2,
            2,
          ],
        },
        Command {
          "type": "L",
          "value": Array [
            4,
            4,
          ],
        },
        Command {
          "type": "C",
          "value": Array [
            6,
            6,
            10,
            6,
            14,
            6,
          ],
        },
        Command {
          "type": "Z",
          "value": Array [],
        },
      ],
      "fill": "#f00",
      "stroke": "#00f",
      "strokeWidth": 8,
    },
  ],
  "height": 400,
  "width": 400,
}
`;

exports[`svg.ts Svg toBase64 1`] = `"data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNTAwIiBoZWlnaHQ9IjUwMCIgdmVyc2lvbj0iMS4xIiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxwYXRoIHN0cm9rZS13aWR0aD0iMSIgZmlsbD0ibm9uZSIgc3Ryb2tlPSIjMDAwIiBzdHJva2UtbGluZWNhcD0icm91bmQiIHN0cm9rZS1saW5lam9pbj0icm91bmQiIGQ9Ik0gMCAwIEMgMC4yIDAuMiAwLjYgMC44IDEgMSBDIDEuNCAxLjIgMS42IDEuMiAyIDEgQyAyLjQgMC44IDIuOCAwLjIgMyAwIj48L3BhdGg+PHBhdGggc3Ryb2tlLXdpZHRoPSIxIiBmaWxsPSJub25lIiBzdHJva2U9IiMwMDAiIHN0cm9rZS1saW5lY2FwPSJzcXVhcmUiIHN0cm9rZS1saW5lam9pbj0ibWl0dGVyIiBkPSJNIDQgNCBMIDkgNCBMIDkgOCBMIDMgMCBaIj48L3BhdGg+PC9zdmc+"`;

exports[`svg.ts Svg toElement 1`] = `
<svg
  height="500"
  width="500"
>
  <path
    d="M 0 0 C 0.2 0.2 0.6 0.8 1 1 C 1.4 1.2 1.6 1.2 2 1 C 2.4 0.8 2.8 0.2 3 0"
    fill="none"
    stroke="#000"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1"
  />
  <path
    d="M 4 4 L 9 4 L 9 8 L 3 0 Z"
    fill="none"
    stroke="#000"
    stroke-linecap="square"
    stroke-linejoin="mitter"
    stroke-width="1"
  />
</svg>
`;

exports[`svg.ts Svg toJson 1`] = `
Object {
  "height": 500,
  "paths": Array [
    Object {
      "attrs": Object {
        "strokeLinecap": "round",
        "strokeLinejoin": "round",
      },
      "d": "M 0 0 C 0.2 0.2 0.6 0.8 1 1 C 1.4 1.2 1.6 1.2 2 1 C 2.4 0.8 2.8 0.2 3 0",
    },
    Object {
      "attrs": Object {
        "strokeLinecap": "square",
        "strokeLinejoin": "mitter",
      },
      "d": "M 4 4 L 9 4 L 9 8 L 3 0 Z",
    },
  ],
  "width": 500,
}
`;
